--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="container">
-    <h1>Generator <br><span> Random Password</span></h1>
+    <h1>Generate a <br><span> Random Password</span></h1>
     <div class="display">
         <input type="text" placeholder="Password" id="password">
         <img src="images/copy.png" id="copy" alt="copy">
